[project]
name = "eprover"
version = "3.0.07"
authors = [{name="Philip Zucker", email= "philzook58@gmail.com"}]
description = "Automated Theorem Prover"
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
homepage = "https://github.com/philzook58/pyeprover"

[tool.setuptools]
packages = ["eprover"]

[tool.setuptools.package-data]
eprover = ["eprover*"]
